--- a/co.edu.uniquindio.reservaSinteticaFx/pom.xml
+++ b/co.edu.uniquindio.reservaSinteticaFx/pom.xml
@@ -24,8 +24,12 @@
       <artifactId>javafx-fxml</artifactId>
       <version>22.0.1</version>
     </dependency>
-
-<dependency>
+    <dependency>
+      <groupId>org.controlsfx</groupId>
+      <artifactId>controlsfx</artifactId>
+      <version>11.1.2</version>
+    </dependency>
+    <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
       <version>${junit.version}</version>
